objects/cnx__UCCE_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>cnx__Connects_Customization_Pagename__c</fullName>
        <label>obsolete</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Gadget_URL__c</fullName>
        <defaultValue>&quot;http://&lt;webserverhost&gt;:8083/ConnectsGadget/connects.html&quot;</defaultValue>
        <label>obsolete</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Media_Service_URL__c</fullName>
        <label>obsolete</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>obsolete</label>
</CustomObject>